<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="gestorventas.is2.com.gestorventasapp.LoginActivity">

    <EditText
        android:id="@+id/et_usuario"
        android:hint="@string/texto_usuario"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="99dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_contrasenha"
        android:gravity="center_horizontal"
        android:hint="@string/texto_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/et_usuario"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/bt_aceptar"
        android:hint="@string/texto_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_contrasenha"
        android:layout_marginTop="18dp" />

</RelativeLayout>
